# cosmictrigger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CTBgAna/: CMakeLists.txt  main.cpp  main_CTBkgAnaDatapoints.cpp  main_manybgdata.cpp
CTBgAna/inc/: bgeval.h  cosmicTemplatesBgAna.h  cosmicTemplatesBgEval.h
CTBgAna/src/: cosmicTemplatesBgAna.cpp  cosmicTemplatesBgEval.cpp
CTBkgAna/: main_CTBkgAnaDatapoints.cpp  main_CTBkgAnaMany.cpp
CTBkgAna/src/: cosmicTemplatesBgAna.cpp  cosmicTemplatesBgEval.cpp
CTCoreModules/: Configuration.h
CTCoreModules/inc/: Configuration.h  Configuration_old.h  PatternEngine.h  PatternEngineSingle.h  SPCalculations.h  TemplateBank.h  TemplateData.h
CTCoreModules/src/: PatternEngine.cpp  PatternEngineSingle.cpp  SPCalculations.cpp  SuperPixelHit.cpp  TemplateBank.cpp  TemplateData.cpp
CTCosPatTrain/: CMakeLists.txt  cosmicTemplatesBuild.cpp  cosmicTemplatesEfficiency.cpp  main_CTbuild.cpp  main_CTbuildDatapoints.cpp  main_CTbuildMany.cpp  main_CTefficiency.cpp  main_CosmicEffTemplFilter.cpp  main_getCosmicData.cpp  main_getCosmicSIDtracks.cpp
CTCosPatTrain/inc/: cosmicEffTemplFilter.h  getCosmicSIDtracks.h
CTCosPatTrain/include/: TBCosmicEfficiency.h  cosmicTemplatesBuild.h
CTCosPatTrain/src/: cosmicEffTemplFilter.cpp  cosmicTemplatesBuild.cpp  getCosmicSIDtracks.cpp
CTPlottingScripts/: CMakeLists.txt  PlotPEconfig.cpp  main_CTtrainTemplSPC.cpp  main_CTtrainplots.cpp  main_bgAnaEffBeam.cpp  main_bgAnaEffSPcount.cpp  main_bgAnaPlots_EffBeamRate.cpp  main_bgAnaPlots_SPC.cpp  main_bgAnaPlots_legacyROC.cpp  main_bgAnaPlots_legacySPC.cpp  main_bgAnaROC.cpp  main_bgAnaROCdp.cpp  main_bgAnaSPC.cpp  main_bgAnaSPR.cpp
CTPlottingScripts/inc/: bgAnaPlots_EffBeamRate.h  bgAnaPlots_EffSPcount.h  bgAnaPlots_ROC.h  bgAnaPlots_legacyROC.h  bgAnaPlots_legacySPC.h  bgAnaPots_EffBeamRate.h  cosmicTemplatesTrainingPlots.h  ctTrainingPlots.h  ctTrainingPlots_TemplatesSPC.h
CTPlottingScripts/src/: bgAnaPlots_EffBeamRate.cpp  bgAnaPlots_EffROC.cpp  bgAnaPlots_EffSPC.cpp  bgAnaPlots_EffSPR.cpp  bgAnaPlots_EffSPcount.cpp  bgAnaPlots_ROC.cpp  bgAnaPlots_legacyROC.cpp  bgAnaPlots_legacySPC.cpp  bgAnaPots_EffBeamRate.cpp  cosmicTemplatesTrainingPlots.cpp  ctTrainingPlots.cpp  ctTrainingPlots_TemplatesSPC.cpp
CTPreSlimData/: CMakeLists.txt  PlotSlimSegsTrackVars.cpp  main.cpp  slimSegsDataScript.cpp
Mu3eCTBgAna/: CMakeLists.txt  main.cpp  main_CTbgana.cpp  main_bg_combinatorics.cpp  main_bgeffcount.cpp  main_bgeffplot.cpp  main_bgroc.cpp
Mu3eCTBgAna/inc/: BgEvalEff.h  bgDataCombinatorics.h  bgeval.h  cosmicTemplatesBgAna.h  cosmicTemplatesBgEval.h  cosmicTemplatesBgPlots.h  cosmicTemplatesBgROC.h
Mu3eCTBgAna/src/: BgEvalEff.cpp  bgDataCombinatorics.cpp  cosmicTemplatesBgAna.cpp  cosmicTemplatesBgEval.cpp  cosmicTemplatesBgPlots.cpp  cosmicTemplatesBgROC.cpp
Mu3eCosPat/: CMakeLists.txt  Makefile  PatternEngine.cpp  PatternEngine.h  PatternEngineSingle.cpp  PatternEngineSingle.h  SPCalculations.cpp  SPCalculations.h  SuperPixel.cpp  SuperPixel.h  SuperPixelHandler.cpp  SuperPixelHandler.h  SuperPixelHit.cpp  SuperPixelHit.h  TBCosmicEfficiency.cpp  TemplateBank.cpp  TemplateBank.h  TemplateData.cpp  TemplateData.h  buildCosmicTrajTemplatesScript.cpp  buildCosmicTrajTemplatesScript.h  cosmicTemplatesBuild.cpp  cosmicTemplatesEfficiency.cpp  cosmicTemplatesEval.cpp  cosmicTemplatesLoad.cpp  cosmicTemplatesTrainingPlots.cpp  main.cpp  main_CTbuild.cpp  main_CTbuildMany.cpp  main_CTeval.cpp  main_CTload.cpp  main_CTplots.cpp  main_get_cosmic_data.cpp  makePlots.cpp  makePlots.h  out  processSegsPrototype.cpp
Mu3eCosPat/include/: PatternEngineSingle.h  TBCosmicEfficiency.h  TemplateBank.h  TemplateData.h  cosmicTemplatesBuild.h  cosmicTemplatesEfficiency.h  cosmicTemplatesLoad.h  makePlots.h
Mu3ePreSlimData/: CMakeLists.txt  main.cpp  slimSegsData.cpp  slimSegsData.h  slimSegsDataScript.cpp  slimSegsDataScript.h
Mu3eRecAcc/: CMakeLists.txt  Mu3eRecAcc  compile_rec_acc.sh  filter_usage.json  recacc_main.cpp  reconstructionAccuracyScript.cpp  reconstructionAccuracyScript.h  reconstruction_accuracy.cpp  reconstruction_accuracy.h
Mu3eSimConfigFiles/: digi_bg.json  digi_cosmic.json  readme.md  run-background.sh  run-cosmics-script.sh  run-many-cosmics-script.sh  trirec_cosmic.sh
RecAccCheck/: CMakeLists.txt  recacc_main.cpp  reconstruction_accuracy.cpp  reconstruction_accuracy.h
karimaki/: cirpar.c  karimakiHelixfit.cpp  karimakiHelixfit.h  karimaki_main.cpp  wrappers.c
playground/: playground.c  read_mu3e.c
root/: BackgroundDataFile.cpp  BackgroundDataFile.h  CMakeLists.txt  MetaDataTree.cpp  MetaDataTree.h  Mu3eTree.cpp  Mu3eTree.h  SegsRepresentation.cpp  SegsRepresentation.h  SegsTreeRead.cpp  SegsTreeRead.h  SlimSegsRepresentation.cpp  SlimSegsRepresentation.h  SlimSegsTree.cpp  SlimSegsTree.h  TemplateDatabase.cpp  TemplateDatabase.h  TemplateDatabaseFile.cpp  TemplateDatabaseFile.h  TemplateDatabaseTree.cpp  TemplateDatabaseTree.h  mu3eTree.cpp  mu3eTree.h
scripts/: Mu3eRecAcc  compile_rec_acc.sh  filter_usage.json  karimaki_test.c  playground.c  read_mu3e.c  recacc_main.c  recacc_main.cpp  reconstruction_accuracy.c  reconstruction_accuracy.cpp  reconstruction_accuracy.h
tests/: CMakeLists.txt  findRootMctypeError.cpp  readme.md  testTemplateBank.h  testTemplateData.h  testTemplateID.h  tests.cpp
util/: CTConfig.cpp  CTConfig.h  Tplots.h  basicDefines.h  cmd_collection.txt  custom_types.h  plots.h  rootData.h  run-cosmics-script.sh  trigonometry.h  utilityFunctions.h  utility_functions.h
